--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -18,6 +18,7 @@
     "max-len": ["error", { "code": 120 }],
     "new-cap": ["error", { "capIsNew": false }],
     "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-multi-spaces": ["error", { "exceptions": { "VariableDeclarator": true } }],
     "quotes": ["error", "single"]
   }
 }
