--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "create-component": "yo @jetbrains/ring-ui:react --path $npm_package_config_components",
     "build": "webpack -p",
-    "test": "karma start",
+    "test": "jest",
     "lint": "eslint . && npm run stylelint",
     "stylelint": "stylelint --ignore-path .gitignore **/*.css",
     "ci-test": "npm run lint && xvfb-maybe karma start --teamcity",
@@ -27,7 +27,6 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "7.1.0",
     "@babel/polyfill": "7.0.0",
     "@jetbrains/babel-preset-jetbrains": "2.1.2",
     "@jetbrains/hub-widget-ui": "1.0.17",
@@ -58,10 +57,15 @@
     "webpack-dev-server": "2.11.3"
   },
   "devDependencies": {
-    "@jetbrains/generator-ring-ui": "1.0.1",
+    "@babel/core": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
     "@jetbrains/eslint-config": "4.0.3",
+    "@jetbrains/generator-ring-ui": "1.0.1",
     "@jetbrains/stylelint-config": "1.3.4",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.0",
+    "babel-jest": "23.6.0",
+    "babel-preset-react": "6.24.1",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-dom": "1.8.0",
@@ -70,6 +74,7 @@
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
     "eslint": "5.6.0",
+    "jest": "23.6.0",
     "karma": "3.0.0",
     "karma-chai-plugins": "0.9.0",
     "karma-electron-launcher": "0.2.0",
@@ -79,6 +84,8 @@
     "karma-webpack": "3.0.5",
     "mocha": "5.2.0",
     "react-test-renderer": "16.5.2",
+    "redux-mock-store": "1.5.3",
+    "regenerator-runtime": "0.12.1",
     "sinon": "5.1.1",
     "sinon-chai": "3.2.0",
     "stylelint": "9.5.0",
