--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
     "eslint": "5.6.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "karma": "3.0.0",
     "karma-chai-plugins": "0.9.0",
