--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "electron": "3.0.0",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
+    "enzyme-to-json": "3.3.4",
     "eslint": "5.6.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
